--- a/app/src/main/res/layout/autobattle_layout.xml
+++ b/app/src/main/res/layout/autobattle_layout.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="2400px"
-    android:layout_height="1080px"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/tool_autobattle_start"
-    tools:ignore="PxUsage">
+    android:windowLayoutInDisplayCutoutMode="shortEdges"
+    tools:ignore="PxUsage" >
     <TextView
         android:id="@+id/start_btn"
         android:layout_width="310px"
@@ -17,13 +18,48 @@
         android:text="Start"
         android:background="@drawable/border_background"
         />
+    <com.example.arknightsautoclicker.components.views.TextAreaView
+        android:id="@+id/mission_start_btn"
+        android:layout_width="204px"
+        android:layout_height="420px"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="549px"
+        android:layout_marginStart="1793px"
+        android:background="@drawable/border_background"
+        android:text="mission,start"
+        app:scale="0.333"
+        />
+    <com.example.arknightsautoclicker.components.views.TextAreaView
+        android:id="@+id/mission_result_btn"
+        android:layout_width="435px"
+        android:layout_height="165px"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="265px"
+        android:layout_marginStart="90px"
+        android:background="@drawable/border_background"
+        android:text="mission,results"
+        app:scale="0.333"
+        />
     <TextView
-        android:layout_width="145px"
-        android:layout_height="55px"
+        android:id="@+id/sanity_label"
+        android:layout_width="155px"
+        android:layout_height="65px"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="35px"
-        android:layout_marginEnd="90px"
+        android:layout_marginTop="30px"
+        android:layout_marginEnd="85px"
+        android:background="@drawable/border_background"
+        />
+    <TextView
+        android:id="@+id/sanity_cost_label"
+        android:layout_width="70px"
+        android:layout_height="35px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10px"
+        android:layout_marginEnd="80px"
         android:background="@drawable/border_background"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
